--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,13 +1,18 @@
 [package]
-name = "mc-launchermeta"
+name = "mc-metadata"
 version = "0.1.0"
 edition = "2021"
+rust-version = "1.56.0"
+authors = ["actioninja"]
+license = "MPL-2.0"
+description = "A library for interacting with the Minecraft Launcher Metadata API"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-serde = {  version = "1.0", features = ["derive"] }
+serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+http-client = { version = "6.5", optional = true }
 
 [dev-dependencies]
 reqwest = { version = "0.11", features = ["blocking", "json"] }
