chore: add my email to the toml

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2021"
 rust-version = "1.56.0"
 description = "A crate providing types for the Minecraft Launcher Metadata API"
-authors = ["actioninja"]
+authors = ["actioninja <actioninja@criticalaction.net>"]
 license = "MPL-2.0"
 categories = ["api-bindings", "game-development"]
 keywords = ["minecraft", "launcher", "metadata", "api", "json"]
