--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2021"
 rust-version = "1.56.0"
 description = "A crate providing types for the Minecraft Launcher Metadata API"
+repository = "https://github.com/actioninja/mc-launchermeta"
 authors = ["actioninja <actioninja@criticalaction.net>"]
 license = "MPL-2.0"
 categories = ["api-bindings", "game-development"]
